Match dependencies to asdf for easier local dev

--- a/app/views/addresses/edit_with_address_select.html.erb
+++ b/app/views/addresses/edit_with_address_select.html.erb
@@ -6,7 +6,7 @@
   <option selected=true>select...</option>
   <option>address 1</option>
   <option>address 2</option>
-  <option>address 3/option>
+  <option>address 3</option>
   <option>address 4</option>
 </select>
 <submit>Submit</submit>
